--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "antd": "^5.11.4",
     "next": "13.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "zod": "^3.22.4",
+    "zod-form-data": "^2.0.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.1.0",
