--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,9 @@
+NEXT_PUBLIC_API_URL=
 DATABASE_URL=
+
+NEXT_PUBLIC_AWS_REGION=
+NEXT_PUBLIC_AWS_BUCKET_NAME=
+NEXT_PUBLIC_AWS_ACCESS_KEY_ID=
+NEXT_PUBLIC_AWS_SECRET_ACCESS_KEY=
+
+NODE_NO_WARNINGS=1
