--- a/package.json
+++ b/package.json
@@ -10,11 +10,32 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.18.0-alpha.5",
+    "@ant-design/icons": "^5.2.6",
+    "@aws-sdk/client-s3": "^3.458.0",
+    "@aws-sdk/lib-storage": "^3.458.0",
+    "@aws-sdk/s3-request-presigner": "^3.458.0",
+    "@pqina/filepond-plugin-image-editor": "^9.0.3",
+    "@pqina/pintura": "^8.68.3",
+    "@pqina/react-pintura": "^9.0.2",
     "@prisma/client": "^5.6.0",
+    "@rjsf/antd": "^5.14.2",
+    "@rjsf/core": "^5.14.2",
+    "@rjsf/utils": "^5.14.2",
+    "@rjsf/validator-ajv8": "^5.14.2",
     "antd": "^5.11.4",
+    "aws-sdk": "^2.1503.0",
+    "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
+    "filepond": "^4.30.4",
+    "filepond-plugin-file-poster": "^2.5.1",
+    "filepond-plugin-image-preview": "^4.6.11",
     "next": "13.5.6",
     "react": "^18",
+    "react-aws-s3-typescript": "^1.1.5",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
+    "react-filepond": "^7.1.2",
+    "react-query": "^3.39.3",
     "zod": "^3.22.4",
     "zod-form-data": "^2.0.2"
   },
@@ -23,6 +44,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^9.0.7",
     "autoprefixer": "^10",
     "eslint": "^8",
     "eslint-config-next": "13.5.6",
